# MiniMover

./: .dockerignore  .gitattributes  .gitignore  .npmrc  AGENTS.md  CAR_CAMERA_SOURCES.md  FIRE_CAR_MOBILE_INTEGRATION.md  PC_RECOGNITION_GUIDE.md  README.md  REASONIX_ASR_PITFALLS.md  REASONIX_TTS_ASR_PITFALLS.md  VOICE_TTS_GUIDE.md  alert.html  api_server.py  app.py  app_pc.py  app_sim.c  app_sim.py  app_sim_run.py  build-profile.json5  camera_rosmaster.py  cao开发版API使用文档.md  check_cars.py  cmd.txt  dashboard.html  delivery.html  dev_hilog.txt  enc.txt  fake_car.py  fleet.html  followline.py  generate_charts.py  generate_data_models.py  home.html  hospital_guide_bridge.py  hospital_guide_console.py  hospital_guide_demo.py  index.html  joystick_rosmaster.py  launch_asr.py  (+44 more)
.doc/: MiniMover导航合并建议.md  fireguard_multimodal_integration.drawio  fireguard_multimodal_integration_design.md  二次开发功能总结.md  云端API接口文档（前端对接）.md  云端数据展示前端需求文档.md  人脸识别API接口文档（客户端对接）.md  人脸识别功能说明（PPT用）.md  导航巡逻API接口文档.md  小车端功能对接文档.md  烟火告警云平台设计方案.md  车端可部署镜像调研结论.md
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
Rocker/: build-profile.json5
audio/: __init__.py  icar_audio.py
charts/: 05_ER图
charts_mmd/: burndown.mmd  class.mmd  dataflow.mmd  er.mmd  frame.mmd  gantt.mmd  pie.mmd  state.mmd  timeline.mmd
doc/: 启动说明.md  (+3 more)
yahboomcar-nav-src/src/yahboomcar_patrol_interfaces/: CMakeLists.txt  package.xml
yahboomcar-nav-src/src/yahboomcar_patrol_interfaces/srv/: GetRobotPose.srv  GetRoute.srv  SetRoute.srv
(+2615 files in other folders)
